# yolov5-pip-headless

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
yolov5/: __init__.py
