[tool.poetry]
name = "yolov5-headless"
version = "7.0.13"
description = "Packaged version of the YoloV5 object detector, sans UI requirements"
authors = []
license = "GPL"
readme = "README.md"
packages = [{ include = "yolov5" }]
repository = "https://github.com/CodingCraftsman/yolov5-pip-headless"
keywords = [
    "machine-learning",
    "deep-learning",
    "ml",
    "pytorch",
    "YOLO",
    "object-detection",
    "vision",
    "YOLOv5",
    "YOLOv7",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[tool.poetry.dependencies]
python = "^3.9"
gitpython = ">=3.1.30"
matplotlib = ">=3.3"
numpy = ">=1.18.5"
opencv-python-headless = ">=4.1.1"
pillow = ">=7.1.2"
psutil = "^6.0.0"
pyyaml = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
thop = ">=0.1.1"
torch = ">=1.7.0"
torchvision = ">=0.8.1"
tqdm = ">=4.64.0"
ultralytics-nogui = ">=8.0.100"

[tool.poetry.group.extras]
optional = true

[tool.poetry.group.extras.dependencies]
boto3 = ">=1.19.1"
fire = "^0.6.0"
huggingface-hub = ">=0.12.0"
roboflow = ">=0.2.29"
sahi = ">=0.11.10"

[tool.poetry.group.logging]
optional = true

[tool.poetry.group.logging.dependencies]
tensorboard = ">=2.4.1"

[tool.poetry.group.plotting]
optional = true

[tool.poetry.group.plotting.dependencies]
pandas = ">=1.1.4"
seaborn = ">=0.11.0"

[tool.poetry.scripts]
yolov5 = "yolov5.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
